# lmms

./: CMakeLists.txt
plugins/vestige/: vestige.cpp
plugins/vst_base/: CMakeLists.txt  RemoteVstPlugin.cpp  VstPlugin.cpp
plugins/vst_base/vstbase/: CMakeLists.txt
